[gd_scene load_steps=7 format=2]

[ext_resource path="res://interaction/bonuses/big_coin.gd" type="Script" id=1]
[ext_resource path="res://art/alpaca_coin.png" type="Texture" id=2]
[ext_resource path="res://art/spark_particle2.png" type="Texture" id=3]
[ext_resource path="res://sound/lcoin.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[sub_resource type="Animation" id=2]
resource_name = "roll"
length = 1.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="big_coin" type="Area2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_h = true
hframes = 11
frame = 9

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/roll = SubResource( 2 )

[node name="screenprox" type="VisibilityNotifier2D" parent="."]

[node name="shine" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
texture = ExtResource( 3 )

[node name="shine_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="deathclock" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_body_enter"]
[connection signal="screen_entered" from="screenprox" to="." method="_on_enter_screen"]
[connection signal="screen_exited" from="screenprox" to="." method="_on_exit_screen"]
[connection signal="timeout" from="deathclock" to="." method="_on_timeout"]
